Add replayable job event stream
